# ax12a_bioroid

./: .gitignore  CMakeLists.txt  README.md  gazebo.xml  manifest.xml  package.xml  reset.sh  show_model.sh  start.sh  test.sh  test_arm.sh  torque_enable.sh
config/: bioroid.rviz  bioroid.yaml  tilt.yaml
launch/: bioroid.launch
nodes/: ._dynamixel_joint_state_publisher.py  dynamixel_joint_state_publisher.py
urdf/: bioroid.urdf
